# Paper-Copilot

./: .gitignore  README.md  app.py  create_gif.py  pyproject.toml  record_demo.py
.streamlit/: config.toml
docs/: 00-project-overview.md  01-setup.md  02-pdf-extraction.md  02b-image-extraction.md  03-tools.md  04-agent.md  05-ui.md
docs/plans/: 2026-02-28-paper-copilot-design.md
src/: agent.py  config.py  prompts.py
src/tools/: extract_images.py  extract_text.py  generate_chart.py  parse_references.py  save_markdown.py
